correctly load static assets with fingerprinting and compression; more readable text with line height 1.4

--- a/src/BlazorShWebsite.Server/wwwroot/css/reset.css
+++ b/src/BlazorShWebsite.Server/wwwroot/css/reset.css
@@ -39,3 +39,7 @@ button {
 button:disabled {
     cursor: auto;
 }
+
+p {
+    line-height: 1.4;
+}
